[package]
name = "aegis-cli"
version = "1.1.1"
description = "Show TOTPs from Aegis vault on CLI"
keywords = ["cli", "totp", "2fa", "aegis"]
repository = "https://github.com/pepa/aegis-cli"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
aegis-vault-utils = "0.5.0"
arboard = "3.2"
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
color-eyre = "0.6"
console = "0.15"
ctrlc = "3.4"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
