[package]
name = "aegis-cli"
version = "1.3.17"
edition = "2024"
authors = ["github.com/pepa65 <pepa65@passchier.net>"]
description = "Show TOTPs from Aegis vault on CLI"
repository = "https://github.com/pepa65/aegis-cli"
documentation = "https://docs.rs/aegis-cli"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["cli", "totp", "2fa", "aegis"]
categories = ["command-line-utilities"]

[[bin]]
name = "aegis"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{version}/aegis"
pkg-fmt = "bin"
target = "x86_64-unknown-linux-musl"
disabled-strategies = ["quick-install", "compile"]
target-family = "Linux"
target-arch = "X86_64"

[dependencies]
aegis-vault-utils = "0.5.1"
arboard = "3.4.1"
clap = { version = "4.5.26", features = ["derive", "cargo", "env"] }
color-eyre = "0.6.3"
console = "0.16"
ctrlc = "3.4.5"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
urlencoding = "2.1.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
